# miniGame

./: .gitignore  AGENTS.md  README.md  platformer  platformer.c
.cursor/rules/: steam-metroidvania-scope.mdc
android/: .gitignore  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/java/com/velir/minigame/: MainActivity.java
android/app/src/main/res/values/: strings.xml
docs/: GAME_VISION_AND_SCOPE.md  MASTER_PROMPTS.md  MILESTONES.md  MOBILE_CHECKLIST.md  PHASE5_CLOSEOUT_TEST.md  PHASE5_VALIDATION_REPORT.md  README.md  TECH_STACK_AND_CONVENTIONS.md  sfx_backlog.md  world_graph.md  world_graph.template.md
include/: assets_loader.h
src/: assets_loader.c
